<resources>
    <string name="app_name">Golf Travel</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="home_page_title">Golf Travel</string>
    <string name="login_page_title">Login</string>
    <string name="register_page_title">Register</string>
    <string name="weather_page_title">Weather</string>
    <string name="golf_round_info_title">Golf Round Info</string>
    <string name="golf_course_finder_page_title">Golf Course Finder</string>
    <string name="intro_page_title_one">Hi I am title ONE</string>
    <string name="intro_page_title_two">Hi I am title TWO</string>
    <string name="intro_page_title_three">Hi I am title THREE</string>
    <string name="intro_page_title_four">Hi I am title FOUR</string>
    <string name="intro_page_description_one">Hi I am description ONE. I can show what ever you want to say.</string>
    <string name="intro_page_description_two">Hi I am description TWO. I can show what ever you want to say.</string>
    <string name="intro_page_description_three">Hi I am description THREE. I can show what ever you want to say.</string>
    <string name="intro_page_description_four">Hi I am description FOUR. I can show what ever you want to say.</string>
    <string name="intro_page_skip_text">SKIP</string>
    <string name="intro_page_next_text">NEXT</string>
    <string name="intro_page_done_text">DONE</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="facebook_app_id">704463803043979</string>
    <string name="fb_login_protocol_scheme">fb704463803043979</string>
    <string name="progress_bar_loading">Loading</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="vertical_form_stepper_form_continue">Continue</string>
    <string name="vertical_form_stepper_form_discard_question_data">Discard data?</string>
    <string name="vertical_form_stepper_form_info_will_be_lost">All the information you have given will be lost</string>
    <string name="vertical_form_stepper_form_discard_cancel">Cancel</string>
    <string name="vertical_form_stepper_form_discard">Discard</string>
    <string name="vertical_form_stepper_form_confirm_button">Confirm data</string>
    <string name="vertical_form_stepper_form_last_step">Confirmation</string>
    <string name="vertical_form_stepper_form_sending_data_message_data">Sending data…</string>
    <string name="vertical_form_stepper_form_current_step_uncompleted_alert">Please complete the current field before continue</string>
    <string name="vertical_form_stepper_form_down_previous">down_previous</string>
    <string name="vertical_form_stepper_form_down_next">down_next</string>
    <string name="add_alarm">Add New Alarm</string>
    <string name="new_alarm_added">New alarm added successfully</string>
    <string name="form_hint_title">Alarm title (required)</string>
    <string name="form_hint_description">Alarm description (optional)</string>
    <string name="error_title_min_characters">At least %1$d characters</string>
    <string name="main_activity_explanation">Click the button to try it!</string>
    <string name="main_activity_explanation_disclaimer">This app DOES NOT set up alarms for real!</string>
    <string-array name="steps_titles">
        <item>Title</item>
        <item>Description</item>
        <item>Time</item>
        <item>Week schedule</item>
    </string-array>
    <string-array name="steps_subtitles">
        <item>Title of the alarm</item>
        <item>Description of the alarm</item>
        <item>Time when the alarm will go off</item>
        <item>Week schedule of the alarm</item>
    </string-array>
    <string-array name="week_days">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>
    <string name="vertical_form_stepper_form_discard_question">Discard alarm?</string>
    <string name="vertical_form_stepper_form_info_will_be_lost_alarm">All the information about this new alarm will be lost</string>
    <string name="vertical_form_stepper_form_confirm_button_alarm">Add alarm</string>
    <string name="vertical_form_stepper_form_sending_data_message">Adding new alarm…</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="change_city">Change city</string>
    <string name="open_weather_maps_app_id">07feea331087c5a411f06487addce1d3</string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>