<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/email_password_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.vchohan.golftravel.EmailPasswordActivity">

    <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrey500"
            android:orientation="vertical"
            android:weightSum="4">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/icon"
                    style="@style/ThemeOverlay.FirebaseIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/desc_firebase_lockup"
                    android:src="@drawable/icon_google_logo" />

            <TextView
                    android:id="@+id/status"
                    style="@style/ThemeOverlay.MyTextDetail"
                    android:text="@string/signed_out" />

            <TextView
                    android:id="@+id/detail"
                    style="@style/ThemeOverlay.MyTextDetail"
                    tools:text="Firebase User ID: 123456789abc" />

        </LinearLayout>


        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorGrey500"
                android:gravity="center_vertical">

            <LinearLayout
                    android:id="@+id/email_password_fields"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                <EditText
                        android:id="@+id/field_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress" />

                <EditText
                        android:id="@+id/field_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/email_password_buttons"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_password_fields"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sign_in"
                        android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                        android:id="@+id/email_create_account_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/create_account"
                        android:theme="@style/ThemeOverlay.MyDarkButton" />
            </LinearLayout>

            <Button
                    android:id="@+id/sign_out_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/sign_out"
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
